# demo_app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/backend/: .dockerignore  .env  Dockerfile  main.py  requirements.txt
app/backend/controller/: order_controller.py
app/backend/database/: database.py
app/backend/models/: order_model.py
app/backend/router/: db_router.py  fake_test_router.py
app/backend/schemas/: mysql.py
app/backend/tests/: conftest.py  test_controller.py  test_main.py  test_schemas.py
app/frontend/: Dockerfile  streamlit_app.py
